--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="title_activity_settings">Settings</string>
     <string name="pref_sort_key">sort</string>
     <string name="pref_sort_label">Sort by</string>
+    <string name="pref_sort_default">popularity</string>
     <string name="pref_sort_popularity">popularity</string>
-    <string name="pref_sort_rating">rating</string>
+    <string name="pref_sort_rating">vote_average</string>
     <string name="pref_sort_popularity_label">Popularity</string>
     <string name="pref_sort_rating_label">Rating</string>
 </resources>
