--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,9 @@
     <string name="pref_sort_popularity_label">Popularity</string>
     <string name="pref_sort_rating_label">Rating</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="movie_title">Movie Title</string>
+    <string name="movie_overview">Movie Overview</string>
+    <string name="movie_rating">User Rating</string>
+    <string name="movie_release">Release Date</string>
 </resources>
 
