Set Poster Image into ImageView; Organize layout with nested LinearLayout with layout_weight

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="title_activity_detail">DetailActivity</string>
     <string name="movie_title">Movie Title</string>
     <string name="movie_overview">Movie Overview</string>
-    <string name="movie_rating">User Rating</string>
-    <string name="movie_release">Release Date</string>
+    <string name="movie_rating_label">User Rating: </string>
+    <string name="movie_release_label">Release Date: </string>
+
 </resources>
 
