--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="movie_overview">Movie Overview</string>
     <string name="movie_rating_label">User Rating: </string>
     <string name="movie_release_label">Release Date: </string>
+    <string name="movie_trailers_label">Trailers: </string>
 
 </resources>
 
