--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
         officia deserunt mollit anim id est laborum</string>
     <!-- No movies from TMDB -->
     <string name="empty_movies_grid">No Movies Information Available</string>
+    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
 </resources>
 
