--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
     <string name="app_name">Top Movie Finder</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
@@ -16,16 +16,17 @@
     <string name="pref_reset_label">Reset Favorite (Clear Preference/Database)</string>
     <string name="pref_reset">reset</string>
     <string name="title_activity_detail">Movie Detail</string>
-    <string name="movie_title">Movie Title</string>
     <string name="please_select_movie">Please Select a Movie</string>
     <string name="please_select_movie_desc">Please Select a Movie to view Movie Detail with Video
     Trailer and User Review</string>
+
     <string name="movie_overview_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
         nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
         officia deserunt mollit anim id est laborum</string>
+
     <string name="movie_trailer_placeholder">Official Trailer #N</string>
     <string name="movie_rating_label">User Rating: </string>
     <string name="movie_release_label">Release Date: </string>
@@ -38,9 +39,16 @@
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
         nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
         officia deserunt mollit anim id est laborum</string>
+
     <!-- No movies from TMDB -->
     <string name="empty_movies_grid">No Network connection. Movies Info Not Available</string>
     <string name="dummy_section_text">Section %1d is just a dummy section.</string>
 
+    <!-- a11y -->
+    <string name="movie_title">Movie title <xliff:g id="title">%1$s</xliff:g></string>
+    <string name="movie_overview">Movie overview <xliff:g id="overview">%1$s</xliff:g></string>
+    <string name="movie_rating">Average User Rating of <xliff:g id="rating">%1$s</xliff:g> from 10</string>
+    <string name="movie_release_date">Movie release date <xliff:g id="date">%1$s</xliff:g></string>
+    <string name="movie_trailer">Movie Trailer <xliff:g id="title">%1$s</xliff:g></string>
 </resources>
 
