--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
-    <string name="app_name">TMF: หาหนังดีดู</string>
+    <string name="app_name">หาหนังดู - TMF</string>
     <string name="title_activity_settings">ตั้งค่า</string>
     <string name="title_activity_detail">รายละเอียดภาพยนต์</string>
 
